--- a/budgy/home/templates/home.html
+++ b/budgy/home/templates/home.html
@@ -4,9 +4,69 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>'BUDGY' Manage Your Finances</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+          crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+          rel="stylesheet">
   </head>
+  <style>
+    h1 {
+      text-align: center;
+    }
+    h2 {
+      text-align: center;
+      margin: 5 auto;
+    }
+    .center {
+      display: flex;
+      justify-content: center; /* Centers horizontally */
+      align-items: center;    /* Centers vertically */ 
+    }
+    iframe {  
+      width: 50vw;
+      height: 50vh;
+      border: none;
+    }
+    html {
+      height: 100%;
+    }
+    body {
+      background-image: linear-gradient(to bottom, #E0FFFF, #87CEEB);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      height: 100%;
+      font-family: "Chakra Petch", sans-serif;
+      font-weight: 400;
+      font-style: normal;
+    }
+  </style>
   <body>
-    พลกฤต กันยายน 6510615229 พลอยพรรณ เต็งประยูร 6510615245 อติชาต เพ็ญวงษ์
-    6610685015 กฤติน ด่านซ้าย 6610685031 ณัฐศิษฏ์ ฐิติธรรมคุณ 6610685155
-  </body>
+  </br>
+  <h1>'BUDGY' Manage Your Finances</h1>
+</br>
+<div class="center">
+  <iframe loading="lazy"
+          src="https://www.canva.com/design/DAG2LcR2s3g/7J1Ntk9fi2PM4Z2yS63HhQ/view?embed"
+          allowfullscreen="allowfullscreen"
+          allow="fullscreen">
+  </iframe>
+</div>
+</br>
+<div>
+  <h1>รายชื่อผู้จัดทำ</h1>
+  <h2>พลกฤต กันยายน 6510615229</h2>
+  <h2>พลอยพรรณ เต็งประยูร 6510615245</h2>
+  <h2>อติชาต เพ็ญวงษ์ 6610685015</h2>
+  <h2>กฤติน ด่านซ้าย 6610685031</h2>
+  <h2>ณัฐศิษฏ์ ฐิติธรรมคุณ 6610685155</h2>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
 </html>
