--- a/budgy/home/templates/home.html
+++ b/budgy/home/templates/home.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="manage, money, profit" />
+    <meta name="description" content="Manage Your Finances" />
     <title>'BUDGY' Manage Your Finances</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           rel="stylesheet" />
