edit and migrate

--- a/budgy/home/templates/home/category_list.html
+++ b/budgy/home/templates/home/category_list.html
@@ -7,6 +7,7 @@
                name="category_name"
                placeholder="Add category...">
         <button type="submit">➕</button>
+        <input type="hidden" name="trans_type" value="some_transaction_type">
     </form>
     <div id="categoryList" class="category-list">
         <!-- Categories will be displayed here -->
