--- a/budgy/home/templates/home/transaction_expense.html
+++ b/budgy/home/templates/home/transaction_expense.html
@@ -5,7 +5,6 @@
 
 {% block body %}
     <script>
-
         // function for fill today date as initial in date field
         window.onload = function() {
             const dateInput = document.getElementById('date_input');
@@ -29,12 +28,10 @@
             // take category to field
             categoryItems.forEach(item => {
                 item.addEventListener('click', function() {
-                    const categoryName = item.firstChild.textContent.trim();
-                    categoryInput.value = categoryName; // ตั้งค่า value ของช่อง input
+                    categoryInput.value = item.textContent; // ตั้งค่า value ของช่อง input
                 });
             });
         });
-
 
         // Function to toggle the visibility of the 'Add/Delete Category' 
         function toggleEditMode() {
@@ -326,8 +323,8 @@
         <main class="main-content">
             <div class="transaction-form-container">
                 <div class="tabs">
-                    <a href="{% url 'transaction_income' request.user.id %}"><button class="tab-button active">Income</button></a>
-                    <a href="{% url 'transaction_expense' request.user.id %}"><button class="tab-button">Expense</button></a>
+                    <a href="{% url 'transaction_income' request.user.id %}"><button class="tab-button">Income</button></a>
+                    <a href="{% url 'transaction_expense' request.user.id %}"><button class="tab-button active">Expense</button></a>
                     <a href="{% url 'transaction_transfer' request.user.id %}"><button class="tab-button">Transfer</button></a>
                 </div>
                 <form class="transaction-form", action="{% url 'transaction_income' user_id=request.user.id %}" method="post" >
@@ -353,24 +350,6 @@
                 </form>
             </div>
         </main>
-
-        <!-- Right Sidebar -->
-        <!-- <aside class="right-sidebar">
-            <div class="category-container">
-                <div class="category-header">
-                    <h3>Category</h3>
-                    <button class="edit-button"><i class="fas fa-edit"></i></button>
-                </div>
-                <ul class="category-list">
-                    <li class="category-item">Allowance</li>
-                    <li class="category-item">Salary</li>
-                    <li class="category-item">Petty Cash</li>
-                    <li class="category-item">Bonus</li>
-                    <li class="category-item">Other</li>
-                    <li class="category-item">Interest</li>
-                </ul>
-            </div>
-        </aside>-->
 
         <aside class="right-sidebar">
             <div class="category-container">
@@ -403,6 +382,7 @@
                 </div>
             </div>
         </aside>
+
     </div> 
 
     <!-- Footer -->
