--- a/budgy/home/templates/home/layout.html
+++ b/budgy/home/templates/home/layout.html
@@ -13,6 +13,7 @@
           rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;600&display=swap"
           rel="stylesheet">
     <style>
@@ -97,8 +98,9 @@
       .navbar-nav .nav-link:hover {
         color: #caf0f8 !important;
         text-shadow: 0 0 6px rgba(255,255,255,0.6);
-      }
+      } 
     </style>
+    
   </head>
   <body>
     <!-- Navbar -->
